--- a/frontend/assets/css/styles.css
+++ b/frontend/assets/css/styles.css
@@ -567,7 +567,7 @@ html[lang="en"] .syncopate {
   }
 
   #asosiy {
-    padding-top: 5rem !important;
+    padding-top: 2px !important;
     min-height: auto !important;
   }
 
